GtkBuilder: Prefer "type-func" over "class" when looking for the GType

https://bugzilla.gnome.org/show_bug.cgi?id=786932